--- a/notebook/create_pdf.ipynb
+++ b/notebook/create_pdf.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "928f055a",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "import random\n",
     "from datetime import datetime, timedelta\n",
     "from azure.identity.aio import DefaultAzureCredential\n",
+    "from dotenv import load_dotenv\n",
     "from azure.storage.blob.aio import BlobServiceClient\n",
     "import os"
    ]
@@ -355,89 +356,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "f98f87e9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Invoice PDF created: invoices/invoice_INV-57096.pdf\n",
-      "Generated invoice 1/10: invoices/invoice_INV-57096.pdf\n",
-      "  Customer: Joshua Compton\n",
-      "  Total: $65,441.25\n",
-      "\n",
-      "Invoice PDF created: invoices/invoice_INV-28558.pdf\n",
-      "Generated invoice 2/10: invoices/invoice_INV-28558.pdf\n",
-      "  Customer: Michael Hughes\n",
-      "  Total: $32,403.00\n",
-      "\n",
-      "Invoice PDF created: invoices/invoice_INV-57347.pdf\n",
-      "Generated invoice 3/10: invoices/invoice_INV-57347.pdf\n",
-      "  Customer: Michelle Jones\n",
-      "  Total: $4,940.25\n",
-      "\n",
-      "Invoice PDF created: invoices/invoice_INV-22749.pdf\n",
-      "Generated invoice 4/10: invoices/invoice_INV-22749.pdf\n",
-      "  Customer: Kara Garcia\n",
-      "  Total: $6,237.00\n",
-      "\n",
-      "Invoice PDF created: invoices/invoice_INV-38372.pdf\n",
-      "Generated invoice 5/10: invoices/invoice_INV-38372.pdf\n",
-      "  Customer: Renee Perry\n",
-      "  Total: $2,478.00\n",
-      "\n",
-      "Invoice PDF created: invoices/invoice_INV-74991.pdf\n",
-      "Generated invoice 6/10: invoices/invoice_INV-74991.pdf\n",
-      "  Customer: Rebecca Smith\n",
-      "  Total: $21,273.00\n",
-      "\n",
-      "Invoice PDF created: invoices/invoice_INV-73980.pdf\n",
-      "Generated invoice 7/10: invoices/invoice_INV-73980.pdf\n",
-      "  Customer: Barbara Clark\n",
-      "  Total: $147,724.50\n",
-      "\n",
-      "Invoice PDF created: invoices/invoice_INV-11790.pdf\n",
-      "Generated invoice 8/10: invoices/invoice_INV-11790.pdf\n",
-      "  Customer: David Gonzales\n",
-      "  Total: $7,187.25\n",
-      "\n",
-      "Invoice PDF created: invoices/invoice_INV-62088.pdf\n",
-      "Generated invoice 9/10: invoices/invoice_INV-62088.pdf\n",
-      "  Customer: Mrs. Taylor Walker\n",
-      "  Total: $2,740.50\n",
-      "\n",
-      "Invoice PDF created: invoices/invoice_INV-94649.pdf\n",
-      "Generated invoice 10/10: invoices/invoice_INV-94649.pdf\n",
-      "  Customer: Victoria Whitehead\n",
-      "  Total: $28,549.50\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['invoices/invoice_INV-57096.pdf',\n",
-       " 'invoices/invoice_INV-28558.pdf',\n",
-       " 'invoices/invoice_INV-57347.pdf',\n",
-       " 'invoices/invoice_INV-22749.pdf',\n",
-       " 'invoices/invoice_INV-38372.pdf',\n",
-       " 'invoices/invoice_INV-74991.pdf',\n",
-       " 'invoices/invoice_INV-73980.pdf',\n",
-       " 'invoices/invoice_INV-11790.pdf',\n",
-       " 'invoices/invoice_INV-62088.pdf',\n",
-       " 'invoices/invoice_INV-94649.pdf']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate dataset to test our custom model\n",
     "generate_multiple_invoices(count=10,training_set=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "73ef6219",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv(override=True)\n",
+    "\n",
+    "storage_account_name=os.getenv('STORAGE_ACCOUNT_NAME')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "aeb62470",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "account_url = f\"https://{storage_account_name}.blob.core.windows.net\"\n",
+    "default_credential = DefaultAzureCredential()\n",
+    "\n",
+    "blob_service_client = BlobServiceClient(account_url, credential=default_credential)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cc2d096d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the two containers\n",
+    "\n",
+    "container_training = await blob_service_client.create_container(\"training\")\n",
+    "\n",
+    "container_dataset = await blob_service_client.create_container(\"invoices\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67494a0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './training./invoices'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 11\u001b[0m\n\u001b[1;32m      5\u001b[0m directories \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./training\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./invoices\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m ]\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m directory \u001b[38;5;129;01min\u001b[39;00m directories:    \n\u001b[0;32m---> 11\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39mlistdir(directory):\n\u001b[1;32m     12\u001b[0m         file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(directory, filename)\n\u001b[1;32m     13\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(file_path) \u001b[38;5;129;01mand\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.pdf\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m     14\u001b[0m             \u001b[38;5;66;03m# Upload to training container\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './training./invoices'"
+     ]
+    }
+   ],
+   "source": [
+    "# Uploads the documents in each specific containers\n",
+    "# Be sure to give you the proper RBAC to upload documents in the container\n",
+    "# You should have Storage Blob Data Contributor\n",
+    "\n",
+    "directories = [\n",
+    "    \"./training\",\n",
+    "    \"./invoices\"\n",
+    "]\n",
+    "\n",
+    "for directory in directories:    \n",
+    "    for filename in os.listdir(directory):\n",
+    "        file_path = os.path.join(directory, filename)\n",
+    "        if os.path.isfile(file_path) and filename.endswith('.pdf'):\n",
+    "            # Upload to training container\n",
+    "            blob_client = blob_service_client.get_blob_client(container=\"training\", blob=filename)\n",
+    "            with open(file_path, \"rb\") as data:\n",
+    "                await blob_client.upload_blob(data, overwrite=True)\n",
+    "            print(f\"Uploaded {filename} to {directory} container\")"
    ]
   }
  ],
